# laser-works

./: CMakeLists.txt  README.md  resources.xml
include/: rapidxml_license.txt
resources/: main.glade
scripts/: embed-resources.py
src/: interface.cpp  interface.h  main.cpp  svg.cpp  svg.h  utils.cpp  utils.h
